docs/c89/c90.output
Estado 333 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | INC_OP unary_expression
   17                 | DEC_OP unary_expression
   18                 | unary_operator cast_expression
   19                 | SIZEOF unary_expression
   20                 | SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'
   25               | '~'
   26               | '!'

   27 cast_expression: unary_expression
   28                | '(' type_name ')' cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression '*' cast_expression
   31                          | multiplicative_expression '/' cast_expression
   32                          | multiplicative_expression '%' cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression '+' multiplicative_expression
   35                    | additive_expression '-' multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression LEFT_OP additive_expression
   38                 | shift_expression RIGHT_OP additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression '<' shift_expression
   41                      | relational_expression '>' shift_expression
   42                      | relational_expression LE_OP shift_expression
   43                      | relational_expression GE_OP shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression EQ_OP relational_expression
   46                    | equality_expression NE_OP relational_expression

   47 and_expression: equality_expression
   48               | and_expression '&' equality_expression

   49 exclusive_or_expression: and_expression
   50                        | exclusive_or_expression '^' and_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression '|' exclusive_or_expression

   53 logical_and_expression: inclusive_or_expression
   54                       | logical_and_expression AND_OP inclusive_or_expression

   55 logical_or_expression: logical_and_expression
   56                      | logical_or_expression OR_OP logical_and_expression

   57 conditional_expression: logical_or_expression
   58                       | logical_or_expression '?' expression ':' conditional_expression

   59 assignment_expression: conditional_expression
   60                      | unary_expression assignment_operator assignment_expression

   61 assignment_operator: '='
   62                    | MUL_ASSIGN
   63                    | DIV_ASSIGN
   64                    | MOD_ASSIGN
   65                    | ADD_ASSIGN
   66                    | SUB_ASSIGN
   67                    | LEFT_ASSIGN
   68                    | RIGHT_ASSIGN
   69                    | AND_ASSIGN
   70                    | XOR_ASSIGN
   71                    | OR_ASSIGN

   72 expression: assignment_expression
   73           | expression ',' assignment_expression

   74 constant_expression: conditional_expression

   75 declaration: declaration_specifiers ';'
   76            | declaration_specifiers init_declarator_list ';'

   77 declaration_specifiers: storage_class_specifier
   78                       | storage_class_specifier declaration_specifiers
   79                       | type_specifier
   80                       | type_specifier declaration_specifiers
   81                       | type_qualifier
   82                       | type_qualifier declaration_specifiers

   83 init_declarator_list: init_declarator
   84                     | init_declarator_list ',' init_declarator

   85 init_declarator: declarator
   86                | declarator '=' initializer

   87 storage_class_specifier: TYPEDEF
   88                        | EXTERN
   89                        | STATIC
   90                        | AUTO
   91                        | REGISTER

   92 type_specifier: VOID
   93               | CHAR
   94               | SHORT
   95               | INT
   96               | LONG
   97               | FLOAT
   98               | DOUBLE
   99               | SIGNED
  100               | UNSIGNED
  101               | struct_or_union_specifier
  102               | enum_specifier
  103               | TYPE_NAME

  104 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  105                          | struct_or_union '{' struct_declaration_list '}'
  106                          | struct_or_union IDENTIFIER

  107 struct_or_union: STRUCT
  108                | UNION

  109 struct_declaration_list: struct_declaration
  110                        | struct_declaration_list struct_declaration

  111 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list
  113                         | type_specifier
  114                         | type_qualifier specifier_qualifier_list
  115                         | type_qualifier

  116 struct_declarator_list: struct_declarator
  117                       | struct_declarator_list ',' struct_declarator

  118 struct_declarator: declarator
  119                  | ':' constant_expression
  120                  | declarator ':' constant_expression

  121 enum_specifier: ENUM '{' enumerator_list '}'
  122               | ENUM IDENTIFIER '{' enumerator_list '}'
  123               | ENUM IDENTIFIER

  124 enumerator_list: enumerator
  125                | enumerator_list ',' enumerator

  126 enumerator: IDENTIFIER
  127           | IDENTIFIER '=' constant_expression

  128 type_qualifier: CONST
  129               | VOLATILE

  130 declarator: pointer direct_declarator
  131           | direct_declarator

  132 direct_declarator: IDENTIFIER
  133                  | '(' declarator ')'
  134                  | direct_declarator '[' constant_expression ']'
  135                  | direct_declarator '[' ']'
  136                  | direct_declarator '(' parameter_type_list ')'
  137                  | direct_declarator '(' identifier_list ')'
  138                  | direct_declarator '(' ')'

  139 pointer: '*'
  140        | '*' type_qualifier_list
  141        | '*' pointer
  142        | '*' type_qualifier_list pointer

  143 type_qualifier_list: type_qualifier
  144                    | type_qualifier_list type_qualifier

  145 parameter_type_list: parameter_list
  146                    | parameter_list ',' ELLIPSIS

  147 parameter_list: parameter_declaration
  148               | parameter_list ',' parameter_declaration

  149 parameter_declaration: declaration_specifiers declarator
  150                      | declaration_specifiers abstract_declarator
  151                      | declaration_specifiers

  152 identifier_list: IDENTIFIER
  153                | identifier_list ',' IDENTIFIER

  154 type_name: specifier_qualifier_list
  155          | specifier_qualifier_list abstract_declarator

  156 abstract_declarator: pointer
  157                    | direct_abstract_declarator
  158                    | pointer direct_abstract_declarator

  159 direct_abstract_declarator: '(' abstract_declarator ')'
  160                           | '[' ']'
  161                           | '[' constant_expression ']'
  162                           | direct_abstract_declarator '[' ']'
  163                           | direct_abstract_declarator '[' constant_expression ']'
  164                           | '(' ')'
  165                           | '(' parameter_type_list ')'
  166                           | direct_abstract_declarator '(' ')'
  167                           | direct_abstract_declarator '(' parameter_type_list ')'

  168 initializer: assignment_expression
  169            | '{' initializer_list '}'
  170            | '{' initializer_list ',' '}'

  171 initializer_list: initializer
  172                 | initializer_list ',' initializer

  173 statement: labeled_statement
  174          | compound_statement
  175          | expression_statement
  176          | selection_statement
  177          | iteration_statement
  178          | jump_statement

  179 labeled_statement: IDENTIFIER ':' statement
  180                  | CASE constant_expression ':' statement
  181                  | DEFAULT ':' statement

  182 compound_statement: '{' '}'
  183                   | '{' statement_list '}'
  184                   | '{' declaration_list '}'
  185                   | '{' declaration_list statement_list '}'

  186 declaration_list: declaration
  187                 | declaration_list declaration

  188 statement_list: statement
  189               | statement_list statement

  190 expression_statement: ';'
  191                     | expression ';'

  192 selection_statement: IF '(' expression ')' statement
  193                    | IF '(' expression ')' statement ELSE statement
  194                    | SWITCH '(' expression ')' statement

  195 iteration_statement: WHILE '(' expression ')' statement
  196                    | DO statement WHILE '(' expression ')' ';'
  197                    | FOR '(' expression_statement expression_statement ')' statement
  198                    | FOR '(' expression_statement expression_statement expression ')' statement

  199 jump_statement: GOTO IDENTIFIER ';'
  200               | CONTINUE ';'
  201               | BREAK ';'
  202               | RETURN ';'
  203               | RETURN expression ';'

  204 translation_unit: external_declaration
  205                 | translation_unit external_declaration

  206 external_declaration: function_definition
  207                     | declaration

  208 function_definition: declaration_specifiers declarator declaration_list compound_statement
  209                    | declaration_specifiers declarator compound_statement
  210                    | declarator declaration_list compound_statement
  211                    | declarator compound_statement


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '!' (33) 26
    '%' (37) 32
    '&' (38) 21 48
    '(' (40) 4 7 8 20 28 133 136 137 138 159 164 165 166 167 192 193 194 195 196 197 198
    ')' (41) 4 7 8 20 28 133 136 137 138 159 164 165 166 167 192 193 194 195 196 197 198
    '*' (42) 22 30 139 140 141 142
    '+' (43) 23 34
    ',' (44) 14 73 84 117 125 146 148 153 170 172
    '-' (45) 24 35
    '.' (46) 9
    '/' (47) 31
    ':' (58) 58 119 120 179 180 181
    ';' (59) 75 76 111 190 191 196 199 200 201 202 203
    '<' (60) 40
    '=' (61) 61 86 127
    '>' (62) 41
    '?' (63) 58
    '[' (91) 6 134 135 160 161 162 163
    ']' (93) 6 134 135 160 161 162 163
    '^' (94) 50
    '{' (123) 104 105 121 122 169 170 182 183 184 185
    '|' (124) 52
    '}' (125) 104 105 121 122 169 170 182 183 184 185
    '~' (126) 25
    error (256)
    IDENTIFIER (258) 1 9 10 104 106 122 123 126 127 132 152 153 179 199
    CONSTANT (259) 2
    STRING_LITERAL (260) 3
    SIZEOF (261) 19 20
    PTR_OP (262) 10
    INC_OP (263) 11 16
    DEC_OP (264) 12 17
    LEFT_OP (265) 37
    RIGHT_OP (266) 38
    LE_OP (267) 42
    GE_OP (268) 43
    EQ_OP (269) 45
    NE_OP (270) 46
    AND_OP (271) 54
    OR_OP (272) 56
    MUL_ASSIGN (273) 62
    DIV_ASSIGN (274) 63
    MOD_ASSIGN (275) 64
    ADD_ASSIGN (276) 65
    SUB_ASSIGN (277) 66
    LEFT_ASSIGN (278) 67
    RIGHT_ASSIGN (279) 68
    AND_ASSIGN (280) 69
    XOR_ASSIGN (281) 70
    OR_ASSIGN (282) 71
    TYPE_NAME (283) 103
    TYPEDEF (284) 87
    EXTERN (285) 88
    STATIC (286) 89
    AUTO (287) 90
    REGISTER (288) 91
    CHAR (289) 93
    SHORT (290) 94
    INT (291) 95
    LONG (292) 96
    SIGNED (293) 99
    UNSIGNED (294) 100
    FLOAT (295) 97
    DOUBLE (296) 98
    CONST (297) 128
    VOLATILE (298) 129
    VOID (299) 92
    STRUCT (300) 107
    UNION (301) 108
    ENUM (302) 121 122 123
    ELLIPSIS (303) 146
    CASE (304) 180
    DEFAULT (305) 181
    IF (306) 192 193
    ELSE (307) 193
    SWITCH (308) 194
    WHILE (309) 195 196
    DO (310) 196
    FOR (311) 197 198
    GOTO (312) 199
    CONTINUE (313) 200
    BREAK (314) 201
    RETURN (315) 202 203


Não terminais com as regras onde eles aparecem

    $accept (85)
        à esquerda: 0
    primary_expression (86)
        à esquerda: 1 2 3 4
        à direita: 5
    postfix_expression (87)
        à esquerda: 5 6 7 8 9 10 11 12
        à direita: 6 7 8 9 10 11 12 15
    argument_expression_list (88)
        à esquerda: 13 14
        à direita: 8 14
    unary_expression (89)
        à esquerda: 15 16 17 18 19 20
        à direita: 16 17 19 27 60
    unary_operator (90)
        à esquerda: 21 22 23 24 25 26
        à direita: 18
    cast_expression (91)
        à esquerda: 27 28
        à direita: 18 28 29 30 31 32
    multiplicative_expression (92)
        à esquerda: 29 30 31 32
        à direita: 30 31 32 33 34 35
    additive_expression (93)
        à esquerda: 33 34 35
        à direita: 34 35 36 37 38
    shift_expression (94)
        à esquerda: 36 37 38
        à direita: 37 38 39 40 41 42 43
    relational_expression (95)
        à esquerda: 39 40 41 42 43
        à direita: 40 41 42 43 44 45 46
    equality_expression (96)
        à esquerda: 44 45 46
        à direita: 45 46 47 48
    and_expression (97)
        à esquerda: 47 48
        à direita: 48 49 50
    exclusive_or_expression (98)
        à esquerda: 49 50
        à direita: 50 51 52
    inclusive_or_expression (99)
        à esquerda: 51 52
        à direita: 52 53 54
    logical_and_expression (100)
        à esquerda: 53 54
        à direita: 54 55 56
    logical_or_expression (101)
        à esquerda: 55 56
        à direita: 56 57 58
    conditional_expression (102)
        à esquerda: 57 58
        à direita: 58 59 74
    assignment_expression (103)
        à esquerda: 59 60
        à direita: 13 14 60 72 73 168
    assignment_operator (104)
        à esquerda: 61 62 63 64 65 66 67 68 69 70 71
        à direita: 60
    expression (105)
        à esquerda: 72 73
        à direita: 4 6 58 73 191 192 193 194 195 196 198 203
    constant_expression (106)
        à esquerda: 74
        à direita: 119 120 127 134 161 163 180
    declaration (107)
        à esquerda: 75 76
        à direita: 186 187 207
    declaration_specifiers (108)
        à esquerda: 77 78 79 80 81 82
        à direita: 75 76 78 80 82 149 150 151 208 209
    init_declarator_list (109)
        à esquerda: 83 84
        à direita: 76 84
    init_declarator (110)
        à esquerda: 85 86
        à direita: 83 84
    storage_class_specifier (111)
        à esquerda: 87 88 89 90 91
        à direita: 77 78
    type_specifier (112)
        à esquerda: 92 93 94 95 96 97 98 99 100 101 102 103
        à direita: 79 80 112 113
    struct_or_union_specifier (113)
        à esquerda: 104 105 106
        à direita: 101
    struct_or_union (114)
        à esquerda: 107 108
        à direita: 104 105 106
    struct_declaration_list (115)
        à esquerda: 109 110
        à direita: 104 105 110
    struct_declaration (116)
        à esquerda: 111
        à direita: 109 110
    specifier_qualifier_list (117)
        à esquerda: 112 113 114 115
        à direita: 111 112 114 154 155
    struct_declarator_list (118)
        à esquerda: 116 117
        à direita: 111 117
    struct_declarator (119)
        à esquerda: 118 119 120
        à direita: 116 117
    enum_specifier (120)
        à esquerda: 121 122 123
        à direita: 102
    enumerator_list (121)
        à esquerda: 124 125
        à direita: 121 122 125
    enumerator (122)
        à esquerda: 126 127
        à direita: 124 125
    type_qualifier (123)
        à esquerda: 128 129
        à direita: 81 82 114 115 143 144
    declarator (124)
        à esquerda: 130 131
        à direita: 85 86 118 120 133 149 208 209 210 211
    direct_declarator (125)
        à esquerda: 132 133 134 135 136 137 138
        à direita: 130 131 134 135 136 137 138
    pointer (126)
        à esquerda: 139 140 141 142
        à direita: 130 141 142 156 158
    type_qualifier_list (127)
        à esquerda: 143 144
        à direita: 140 142 144
    parameter_type_list (128)
        à esquerda: 145 146
        à direita: 136 165 167
    parameter_list (129)
        à esquerda: 147 148
        à direita: 145 146 148
    parameter_declaration (130)
        à esquerda: 149 150 151
        à direita: 147 148
    identifier_list (131)
        à esquerda: 152 153
        à direita: 137 153
    type_name (132)
        à esquerda: 154 155
        à direita: 20 28
    abstract_declarator (133)
        à esquerda: 156 157 158
        à direita: 150 155 159
    direct_abstract_declarator (134)
        à esquerda: 159 160 161 162 163 164 165 166 167
        à direita: 157 158 162 163 166 167
    initializer (135)
        à esquerda: 168 169 170
        à direita: 86 171 172
    initializer_list (136)
        à esquerda: 171 172
        à direita: 169 170 172
    statement (137)
        à esquerda: 173 174 175 176 177 178
        à direita: 179 180 181 188 189 192 193 194 195 196 197 198
    labeled_statement (138)
        à esquerda: 179 180 181
        à direita: 173
    compound_statement (139)
        à esquerda: 182 183 184 185
        à direita: 174 208 209 210 211
    declaration_list (140)
        à esquerda: 186 187
        à direita: 184 185 187 208 210
    statement_list (141)
        à esquerda: 188 189
        à direita: 183 185 189
    expression_statement (142)
        à esquerda: 190 191
        à direita: 175 197 198
    selection_statement (143)
        à esquerda: 192 193 194
        à direita: 176
    iteration_statement (144)
        à esquerda: 195 196 197 198
        à direita: 177
    jump_statement (145)
        à esquerda: 199 200 201 202 203
        à direita: 178
    translation_unit (146)
        à esquerda: 204 205
        à direita: 0 205
    external_declaration (147)
        à esquerda: 206 207
        à direita: 204 205
    function_definition (148)
        à esquerda: 208 209 210 211
        à direita: 206


Estado 0

    0 $accept: • translation_unit $end

    IDENTIFIER  deslocar, e ir ao estado 1
    TYPE_NAME   deslocar, e ir ao estado 2
    TYPEDEF     deslocar, e ir ao estado 3
    EXTERN      deslocar, e ir ao estado 4
    STATIC      deslocar, e ir ao estado 5
    AUTO        deslocar, e ir ao estado 6
    REGISTER    deslocar, e ir ao estado 7
    CHAR        deslocar, e ir ao estado 8
    SHORT       deslocar, e ir ao estado 9
    INT         deslocar, e ir ao estado 10
    LONG        deslocar, e ir ao estado 11
    SIGNED      deslocar, e ir ao estado 12
    UNSIGNED    deslocar, e ir ao estado 13
    FLOAT       deslocar, e ir ao estado 14
    DOUBLE      deslocar, e ir ao estado 15
    CONST       deslocar, e ir ao estado 16
    VOLATILE    deslocar, e ir ao estado 17
    VOID        deslocar, e ir ao estado 18
    STRUCT      deslocar, e ir ao estado 19
    UNION       deslocar, e ir ao estado 20
    ENUM        deslocar, e ir ao estado 21
    '('         deslocar, e ir ao estado 22
    '*'         deslocar, e ir ao estado 23

    declaration                ir ao estado 24
    declaration_specifiers     ir ao estado 25
    storage_class_specifier    ir ao estado 26
    type_specifier             ir ao estado 27
    struct_or_union_specifier  ir ao estado 28
    struct_or_union            ir ao estado 29
    enum_specifier             ir ao estado 30
    type_qualifier             ir ao estado 31
    declarator                 ir ao estado 32
    direct_declarator          ir ao estado 33
    pointer                    ir ao estado 34
    translation_unit           ir ao estado 35
    external_declaration       ir ao estado 36
    function_definition        ir ao estado 37


Estado 1

  132 direct_declarator: IDENTIFIER •

    $padrão  reduzir usando a regra 132 (direct_declarator)


Estado 2

  103 type_specifier: TYPE_NAME •

    $padrão  reduzir usando a regra 103 (type_specifier)


Estado 3

   87 storage_class_specifier: TYPEDEF •

    $padrão  reduzir usando a regra 87 (storage_class_specifier)


Estado 4

   88 storage_class_specifier: EXTERN •

    $padrão  reduzir usando a regra 88 (storage_class_specifier)


Estado 5

   89 storage_class_specifier: STATIC •

    $padrão  reduzir usando a regra 89 (storage_class_specifier)


Estado 6

   90 storage_class_specifier: AUTO •

    $padrão  reduzir usando a regra 90 (storage_class_specifier)


Estado 7

   91 storage_class_specifier: REGISTER •

    $padrão  reduzir usando a regra 91 (storage_class_specifier)


Estado 8

   93 type_specifier: CHAR •

    $padrão  reduzir usando a regra 93 (type_specifier)


Estado 9

   94 type_specifier: SHORT •

    $padrão  reduzir usando a regra 94 (type_specifier)


Estado 10

   95 type_specifier: INT •

    $padrão  reduzir usando a regra 95 (type_specifier)


Estado 11

   96 type_specifier: LONG •

    $padrão  reduzir usando a regra 96 (type_specifier)


Estado 12

   99 type_specifier: SIGNED •

    $padrão  reduzir usando a regra 99 (type_specifier)


Estado 13

  100 type_specifier: UNSIGNED •

    $padrão  reduzir usando a regra 100 (type_specifier)


Estado 14

   97 type_specifier: FLOAT •

    $padrão  reduzir usando a regra 97 (type_specifier)


Estado 15

   98 type_specifier: DOUBLE •

    $padrão  reduzir usando a regra 98 (type_specifier)


Estado 16

  128 type_qualifier: CONST •

    $padrão  reduzir usando a regra 128 (type_qualifier)


Estado 17

  129 type_qualifier: VOLATILE •

    $padrão  reduzir usando a regra 129 (type_qualifier)


Estado 18

   92 type_specifier: VOID •

    $padrão  reduzir usando a regra 92 (type_specifier)


Estado 19

  107 struct_or_union: STRUCT •

    $padrão  reduzir usando a regra 107 (struct_or_union)


Estado 20

  108 struct_or_union: UNION •

    $padrão  reduzir usando a regra 108 (struct_or_union)


Estado 21

  121 enum_specifier: ENUM • '{' enumerator_list '}'
  122               | ENUM • IDENTIFIER '{' enumerator_list '}'
  123               | ENUM • IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 38
    '{'         deslocar, e ir ao estado 39


Estado 22

  133 direct_declarator: '(' • declarator ')'

    IDENTIFIER  deslocar, e ir ao estado 1
    '('         deslocar, e ir ao estado 22
    '*'         deslocar, e ir ao estado 23

    declarator         ir ao estado 40
    direct_declarator  ir ao estado 33
    pointer            ir ao estado 34


Estado 23

  139 pointer: '*' •
  140        | '*' • type_qualifier_list
  141        | '*' • pointer
  142        | '*' • type_qualifier_list pointer

    CONST     deslocar, e ir ao estado 16
    VOLATILE  deslocar, e ir ao estado 17
    '*'       deslocar, e ir ao estado 23

    $padrão  reduzir usando a regra 139 (pointer)

    type_qualifier       ir ao estado 41
    pointer              ir ao estado 42
    type_qualifier_list  ir ao estado 43


Estado 24

  207 external_declaration: declaration •

    $padrão  reduzir usando a regra 207 (external_declaration)


Estado 25

   75 declaration: declaration_specifiers • ';'
   76            | declaration_specifiers • init_declarator_list ';'
  208 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  209                    | declaration_specifiers • declarator compound_statement

    IDENTIFIER  deslocar, e ir ao estado 1
    '('         deslocar, e ir ao estado 22
    '*'         deslocar, e ir ao estado 23
    ';'         deslocar, e ir ao estado 44

    init_declarator_list  ir ao estado 45
    init_declarator       ir ao estado 46
    declarator            ir ao estado 47
    direct_declarator     ir ao estado 33
    pointer               ir ao estado 34


Estado 26

   77 declaration_specifiers: storage_class_specifier •
   78                       | storage_class_specifier • declaration_specifiers
